src/objects/PurchaseLine__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemId__c</fullName>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>PurchaseLines</relationshipLabel>
        <relationshipName>PurchaseLines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PurchaseId__c</fullName>
        <label>Purchase</label>
        <referenceTo>Purchase__c</referenceTo>
        <relationshipLabel>PurchaseLines</relationshipLabel>
        <relationshipName>PurchaseLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UnitCost__c</fullName>
        <label>UnitCost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PurchaseLine</label>
    <nameField>
        <label>PurchaseLine Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PurchaseLines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>